argocd/platform/delivery/woodpecker/prereqs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: woodpecker
  labels:
    trust.home.arpa/enabled: "true"
