argocd/platform/delivery/woodpecker/prereqs/redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker-http-redirect
  namespace: woodpecker
spec:
  parentRefs:
    - name: woodpecker
      sectionName: http
  hostnames:
    - ci.lab.zerodi.ru
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
